--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 <section id="kontakt">
     <h2>Kontakt</h2>
     <p>📞 Telefon: 0170 0000000</p>
-    <p>📍 Adresse: Musterstraße 12, 12345 Musterstadt</p>
+    <p>📍 Adresse: albaner 12, 12345 Musterstadt</p>
     <p>✉️ E-Mail: info@fliesenleger.de</p>
 </section>
 
 <footer>
-    © 2025 Fliesenleger Meisterbetrieb – Alle Rechte vorbehalten
+    © 2025 BV Fliesen – Alle Rechte vorbehalten
 </footer>
 
 </body>
