--- a/index.html
+++ b/index.html
@@ -3,216 +3,174 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BV Fliesen TEST</title>
+    <title>BV Fliesen – Professionelle Fliesenarbeiten</title>
 
     <style>
+        /* ------------------------------
+           GLOBAL STYLES
+        ------------------------------ */
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            font-family: "Segoe UI", Arial, sans-serif;
+            background: #f2f4f7;
             color: #1A2A3A;
+            line-height: 1.6;
         }
 
+        h1, h2, h3 {
+            font-weight: 700;
+            margin: 0;
+        }
+
+        a { text-decoration: none; }
+
+        /* ------------------------------
+           HEADER
+        ------------------------------ */
         header {
-            background: #1A2A3A;
+            background: #0F1C2E;
             color: white;
             padding: 20px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 50;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
 
-        header h1 { 
-            margin: 0; 
+        header img {
+            height: 70px;
         }
 
         nav a {
             color: white;
-            text-decoration: none;
-            margin-left: 20px;
-            font-weight: bold;
-        } /* ← WICHTIG! Diese Klammer hat in deinem Code gefehlt */
+            margin-left: 25px;
+            font-size: 17px;
+            font-weight: 500;
+            padding-bottom: 4px;
+            transition: 0.2s;
+        }
 
+        nav a:hover {
+            border-bottom: 2px solid #00C2C2;
+        }
+
+        /* ------------------------------
+            HERO SECTION
+        ------------------------------ */
         .hero {
-            height: 90vh;
+            height: 88vh;
             background: url('Badsanierungbild.hero.png') center center/cover no-repeat;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             text-align: center;
             color: white;
             padding: 0 20px;
             position: relative;
         }
 
-        /* Dunkler Overlay für bessere Lesbarkeit */
-        .hero:before {
+        .hero::before {
             content: "";
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.45);
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: rgba(0,0,0,0.55);
             z-index: 1;
         }
 
-        .hero * {
+        .hero-content {
             position: relative;
             z-index: 2;
+            max-width: 800px;
         }
 
         .hero h2 {
-            font-size: 48px;
-            margin: 0;
+            font-size: 52px;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 22px;
+            margin-bottom: 25px;
         }
 
         .btn {
-            background: #00A8A8;
+            background: #00C2C2;
             color: white;
-            padding: 12px 24px;
-            display: inline-block;
-            margin-top: 20px;
-            text-decoration: none;
+            padding: 14px 32px;
             font-size: 18px;
-            border-radius: 6px;
+            display: inline-block;
+            border-radius: 8px;
+            transition: 0.25s;
+            font-weight: 600;
         }
 
+        .btn:hover {
+            background: #009E9E;
+            transform: translateY(-2px);
+        }
+
+        /* ------------------------------
+            SECTIONS
+        ------------------------------ */
         section {
-            padding: 60px 40px;
+            padding: 70px 40px;
+            max-width: 1400px;
+            margin: auto;
         }
 
+        #leistungen h2,
+        #galerie h2,
+        #kontakt h2 {
+            font-size: 34px;
+            margin-bottom: 25px;
+        }
+
+        /* Leistungen Grid */
         .leistungen {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 25px;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 30px;
         }
 
         .leistung-box {
             background: white;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            padding: 28px;
+            border-radius: 14px;
+            box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+            transition: 0.25s;
         }
 
+        .leistung-box:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 12px 24px rgba(0,0,0,0.14);
+        }
+
+        /* GALLERY */
         .galerie img {
             width: 100%;
-            border-radius: 10px;
-            margin-bottom: 20px;
+            border-radius: 14px;
+            margin-bottom: 25px;
+            box-shadow: 0 6px 18px rgba(0,0,0,0.15);
         }
 
+        /* ------------------------------
+            FOOTER
+        ------------------------------ */
         footer {
-            background: #1A2A3A;
+            background: #0F1C2E;
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 25px;
+            margin-top: 40px;
         }
 
-        /* =================================== */
-        /* 📱 Mobile Optimierung */
-        /* =================================== */
-
+        /* ------------------------------
+            MOBILE OPTIMIERUNG
+        ------------------------------ */
         @media (max-width: 768px) {
-
             header {
-                flex-direction: column;
-                text-align: center;
-                padding: 10px 0;
-            }
-
-            header img {
-                height: 60px;
-                margin: 0 auto 10px;
-            }
-
-            nav a {
-                margin-left: 10px;
-                font-size: 16px;
-            }
-
-            .hero {
-                height: 60vh;
-                padding: 10px;
-                background-position: center;
-            }
-
-            .hero h2 {
-                font-size: 28px;
-            }
-
-            .btn {
-                font-size: 16px;
-                padding: 10px 20px;
-            }
-
-            section {
-                padding: 40px 20px;
-            }
-        }
-
-    </style>
-</head>
-<body>
-
-<header>
-    <img src="bvfliesen_logo.png" alt="BV Fliesen Logo" style="height:80px; margin-right:20px;">
-    <h1>BV Fliesen</h1>
-    <nav>
-        <a href="#start">Start</a>
-        <a href="#leistungen">Leistungen</a>
-        <a href="#galerie">Galerie</a>
-        <a href="#kontakt">Kontakt</a>
-    </nav>
-</header>
-
-<div class="hero" id="start">
-    <div>
-        <h2>Professionelle Fliesenarbeiten</h2>
-        <p>Bad • Boden • Mosaik • Reparaturen</p>
-        <a href="#kontakt" class="btn">Kostenloses Angebot</a>
-    </div>
-</div>
-
-<section id="leistungen">
-    <h2>Unsere Leistungen</h2>
-    <div class="leistungen">
-        <div class="leistung-box">
-            <h3>Badsanierung</h3>
-            <p>Komplette Badfliesen und hochwertige Gestaltung.</p>
-        </div>
-        <div class="leistung-box">
-            <h3>Bodenfliesen</h3>
-            <p>Langlebig, modern und professionell verlegt.</p>
-        </div>
-        <div class="leistung-box">
-            <h3>Mosaikarbeiten</h3>
-            <p>Individuelle Designs für ein edles Finish.</p>
-        </div>
-        <div class="leistung-box">
-            <h3>Reparaturen</h3>
-            <p>Schnelle und zuverlässige Ausbesserungen.</p>
-        </div>
-    </div>
-</section>
-
-<section id="galerie">
-    <h2>Galerie</h2>
-    <div class="galerie">
-        <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Fliesen Beispiel">
-        <img src="https://images.unsplash.com/photo-1598470470809-83d7956ff06f" alt="Bad Beispiel">
-    </div>
-</section>
-
-<section id="kontakt">
-    <h2>Kontakt</h2>
-    <p>📞 Telefon: 0170 0000000</p>
-    <p>📍 Adresse: albaner 12, 12345 Musterstadt</p>
-    <p>✉️ E-Mail: info@fliesenleger.de</p>
-</section>
-
-<footer>
-    © 2025 BV Fliesen – Alle Rechte vorbehalten
-</footer>
-
-</body>
-</html>
+                fl
