Add Impressum section to index.html
Signed-off-by: Aller1409 <ardilon.beqiraj1409@gmail.com>

--- a/index.html
+++ b/index.html
@@ -266,8 +266,40 @@
 </section>
 
 <footer>
-    © 2025 BV Fliesen – Alle Rechte vorbehalten
+ © 2025 BV Fliesen – Alle Rechte vorbehalten |
+<a href="#impressum" style="color:#00C2C2; text-decoration:none;">Impressum</a>
 </footer>
+<!-- IMPRESSUM -->
+<section id="impressum" style="padding:60px 40px; max-width:900px; margin:auto;">
+    <h2>Impressum</h2>
+
+    <p><strong>BV Fliesen</strong><br>
+    Inhaber: Ardilon Beqiraj<br>
+    Robert-Schuman-Str. 3<br>
+    65197 Wiesbaden</p>
+
+    <p><strong>Kontakt:</strong><br>
+    Telefon: 0170 0000000<br>
+    E-Mail: info@fliesenleger.de</p>
+
+    <p><strong>Umsatzsteuer-ID:</strong><br>
+    (Falls vorhanden eintragen – oder Zeile löschen)</p>
+
+    <p><strong>Berufsbezeichnung:</strong><br>
+    Fliesen-, Platten- und Mosaikleger (Deutschland)</p>
+
+    <p><strong>Zuständige Handwerkskammer:</strong><br>
+    Handwerkskammer Wiesbaden</p>
+
+    <p><strong>Haftungshinweis:</strong><br>
+    Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links.
+    Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.</p>
+
+    <p><strong>Urheberrecht:</strong><br>
+    Alle Inhalte dieser Webseite sind urheberrechtlich geschützt.</p>
+</section>
+
+
 
 </body>
 </html>
