--- a/index.html
+++ b/index.html
@@ -260,9 +260,10 @@
 <!-- KONTAKT -->
 <section id="kontakt">
     <h2>Kontakt</h2>
-    <p>📞 Telefon: 0170 0000000</p>
-    <p>📍 Adresse: albaner 12, 12345 Musterstadt</p>
-    <p>✉️ E-Mail: info@fliesenleger.de</p>
+    <p>📞 Telefon: 0152 08392863 </p>
+    <p>📍 Adresse: Eyachstraße 21 <br>
+    72459 Albstadt </p>
+    <p>✉️ E-Mail: info@bv-fliesen.de</p>
 </section>
 
 <footer>
@@ -274,13 +275,13 @@
     <h2>Impressum</h2>
 
     <p><strong>BV Fliesen</strong><br>
-    Inhaber: Ardilon Beqiraj<br>
-    Robert-Schuman-Str. 3<br>
-    65197 Wiesbaden</p>
+    Inhaber: Valon Beqirej<br>
+    Eyachstraße 21 <br>
+    72459 Albstadt</p>
 
     <p><strong>Kontakt:</strong><br>
-    Telefon: 0170 0000000<br>
-    E-Mail: info@fliesenleger.de</p>
+    Telefon: 0152 08392863<br>
+    E-Mail: info@bv-fliesen.de</p>
 
     <p><strong>Umsatzsteuer-ID:</strong><br>
     (Falls vorhanden eintragen – oder Zeile löschen)</p>
@@ -289,7 +290,7 @@
     Fliesen-, Platten- und Mosaikleger (Deutschland)</p>
 
     <p><strong>Zuständige Handwerkskammer:</strong><br>
-    Handwerkskammer Wiesbaden</p>
+    Handwerkskammer Reutlingen</p>
 
     <p><strong>Haftungshinweis:</strong><br>
     Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links.
