--- a/index.html
+++ b/index.html
@@ -1059,11 +1059,9 @@
                 </p>
 
                 <!-- HINWEIS: Für echten Mailversand z.B. Formspree oder Web3Forms nutzen -->
-                <form id="kontaktForm" <form
-                        action="https://formspree.io/f/xnnevkqg"
-                        method="POST"
-                        id="kontaktformular"
-                        autocomplete="on"
+                <form id="kontaktformular" action="https://formspree.io/f/xnnevkqg"
+                     method="POST"
+                    autocomplete="on">
                     <div class="field">
                         <label for="name">Name *</label>
                         <input type="text" id="name" name="name" required>
