Update form action URL in index.html
Signed-off-by: Aller1409 <ardilon.beqiraj1409@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
                 </p>
 
                 <!-- HINWEIS: Für echten Mailversand z.B. Formspree oder Web3Forms nutzen -->
-                <form id="kontaktformular" action="https://formspree.io/f/xnnevkqg"
+                <form id="kontaktformular" action="https://formspree.io/f/xvgeqwpw
                      method="POST"
                     autocomplete="on">
                     <div class="field">
