Add background position to hero section styles
Signed-off-by: Aller1409 <ardilon.beqiraj1409@gmail.com>

--- a/index.html
+++ b/index.html
@@ -671,8 +671,11 @@
             .nav-cta { display: none; }
             .nav-toggle { display: inline-flex; }
 
-            .hero { margin: 18px auto 22px; border-radius: 24px; }
-            .hero-content { padding: 26px 22px 26px; }
+            .hero { 
+             margin: 18px auto 22px;
+             border-radius: 24px;
+             background-position: 15% center;
+}            .hero-content { padding: 26px 22px 26px; }
             .hero h1 { font-size: 28px; }
             .hero-meta { flex-direction: column; }
 
